--- a/portfolio.html
+++ b/portfolio.html
@@ -308,22 +308,18 @@
             </li>
           </ul>
         </div>
-        <div class="fooer-form">
+        <div class="footer-form">
           <form class="form">
-            <strong class="fooer-form-title footer-social-title">Підпишіться на розсилку</strong>
+            <strong class="footer-social-title">Підпишіться на розсилку</strong>
             <div class="fooer-form-set">
-              <div class="form-mail-footer">
-                <label class="form-labe-footer" for="footer-user-email"></label>
-                <input class="form-input-footer" type="email" id="footer-user-email" placeholder="E-mail" />
-              </div>
-              <div class="form-group-footer">
-                <button class="footer-form-btg hero-button" type="submit">
-                  Підписатися
-                  <svg class="footer-btg-icon" width="24" height="24">
-                    <use href="./imeges/icomoon.svg#icon-send"></use>
-                  </svg>
-                </button>
-              </div>
+              <input class="form-input-footer" type="email" id="footer-user-email" placeholder="E-mail" />
+
+              <button class="footer-form-btg hero-button" type="submit">
+                Підписатися
+                <svg class="footer-btg-icon" width="24" height="24">
+                  <use href="./imeges/icomoon.svg#icon-send"></use>
+                </svg>
+              </button>
             </div>
           </form>
         </div>
