--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="description" content="Разработка сайтов под ключ" />
@@ -11,6 +12,7 @@
   <link rel="stylesheet" href="./css/normalaze.css" />
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
+
 <body data-page>
   <!-- Header section-->
   <header class="header">
@@ -402,22 +404,18 @@
             </li>
           </ul>
         </div>
-        <div class="fooer-form">
+        <div class="footer-form">
           <form class="form">
-            <strong class="fooer-form-title footer-social-title">Підпишіться на розсилку</strong>
+            <strong class="footer-social-title">Підпишіться на розсилку</strong>
             <div class="fooer-form-set">
-              <div class="form-mail-footer">
-                <label class="form-labe-footer" for="footer-user-email"></label>
-                <input class="form-input-footer" type="email" id="footer-user-email" placeholder="E-mail" />
-              </div>
-              <div class="form-group-footer">
-                <button class="footer-form-btg hero-button" type="submit">
-                  Підписатися
-                  <svg class="footer-btg-icon" width="24" height="24">
-                    <use href="./imeges/icomoon.svg#icon-send"></use>
-                  </svg>
-                </button>
-              </div>
+              <input class="form-input-footer" type="email" id="footer-user-email" placeholder="E-mail" />
+
+              <button class="footer-form-btg hero-button" type="submit">
+                Підписатися
+                <svg class="footer-btg-icon" width="24" height="24">
+                  <use href="./imeges/icomoon.svg#icon-send"></use>
+                </svg>
+              </button>
             </div>
           </form>
         </div>
@@ -428,7 +426,7 @@
   <div class="backdrop is-hidden" data-modal>
     <div class="modal">
       <button class="modal-btn" data-modal-close>
-        <svg class="modal-btn-icon" width="11" height="11">
+        <svg class="modal-btn-icon" width="18" height="18">
           <use href="./imeges/icomoon.svg#icon-close"></use>
         </svg>
       </button>
@@ -437,7 +435,7 @@
         <div class="form-group-wrapper">
           <div class="form-group">
             <label class="form-labe" for="user-name">Ім'я</label>
-            <input class="form-input" type="text" id="user-name"/>
+            <input class="form-input" type="text" id="user-name" />
             <svg class="form-icon" width="18" height="18">
               <use href="./imeges/icomoon.svg#person"></use>
             </svg>
@@ -458,8 +456,7 @@
           </div>
           <div class="form-group">
             <label class="form-labe" for="user-comment">Коментар</label>
-            <textarea class="form-input form-input-comment"  id="user-comment"
-              placeholder="Введіть текст"></textarea>
+            <textarea class="form-input form-input-comment" id="user-comment" placeholder="Введіть текст"></textarea>
           </div>
         </div>
         <label class="check-label">
@@ -472,13 +469,12 @@
             <a class="check-link link" href="">Умови договору</a></span>
         </label>
         <div class="modal-form-button-wrapper">
-          <button class="modal-form-bt hero-button" type="submit">
-            Відправити
-          </button>
+          <button class="hero-button" type="submit">Відправити</button>
         </div>
       </form>
     </div>
   </div>
   <script src="./js/modal.js"></script>
 </body>
+
 </html>
